[3.7] bpo-34052: Prevent SQLite functions from setting callbacks on exceptions. (GH-8113). (cherry picked from commit 5b25f1d03100e2283c1b129d461ba68ac0169a14)

Co-authored-by: Sergey Fedoseev <fedoseev.sergey@gmail.com>